Added styling for main title, sizing for h1, color, centering and box sizing

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p>&#46;&#46;&#46;mathematician, computer scientist, logician, cryptanalyst, philosopher, and theoretical biologist.</p>
     </header>
 
-    <main>
+    <main id="main">
       <section id="intro">
         <img src="https://www.biography.com/.image/t_share/MTE5NDg0MDU1MTUzMTE2Njg3/alan-turing-9512017-1-402.jpg" alt="Alan Turing headshot in black and white">
         <p>The famed code-breaking war hero, now considered the father of computer science and artificial intelligence, was criminally convicted and harshly treated under the U.K.'s homophobic laws.</p>
