Added styling for intro box with picture and short description of person in line. Adjusted box size for certain screen sizes

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
       <section id="timeline">
         <h2>Here's a time line of Alan Turing's life:</h2>
         <ul>
-          <li><p><strong>1912 - </strong>Born in London, United Kingdom</p></li>
-          <li><p><strong>1931 - </strong>attended King's College in Cambridge where he was awarded first-class honours in Mathematics in 1934</p></li>
-          <li><p><strong>1935 - </strong>at 22 years old, he was elected a fellow of King's on the strength of a dissertation in which he proved the central limit theorem.</p></li>
-          <li><p><strong>1936 - </strong>he spent most of his time studying under Church at Princeton University, in the second year as a Jane Eliza Procter Visiting Fellow.</p></li>
-          <li><p><strong>1938 - </strong>Turing obtained his PhD from the Department of Mathematics at Princeton.</p></li>
-          <li><p><strong>1938 - </strong>he worked part-time with the Government Code and Cypher School (GC&CS), the British codebreaking organisation.</p></li>
-          <li><p><strong>1939 - </strong>by using statistical techniques to optimise the trial of different possibilities in the code breaking process, Turing made an innovative contribution to the subject.</p></li>
-          <li><p><strong>1940 - </strong>within weeks of arriving at Bletchley Park, Turing had specified an electromechanical machine called the bombe, which could break Enigma more effectively than the Polish bomba kryptologiczna, from which its name was derived.</p></li>
-          <li><p><strong>1942 - </strong>Turing devised a technique termed Turingery (or jokingly Turingismus)[96] for use against the Lorenz cipher messages produced by the Germans' new Geheimschreiber (secret writer) machine.</p></li>
-          <li><p><strong>1945 - </strong>he lived in Hampton, London, while he worked on the design of the ACE (Automatic Computing Engine) at the National Physical Laboratory (NPL).</p></li>
-          <li><p><strong>1948 - </strong>Turing was appointed reader in the Mathematics Department at the Victoria University of Manchester.</p></li>
-          <li><p><strong>1950 - </strong>he first addressed the issue of artificial intelligence in his 1950 paper, "Computing machinery and intelligence,".</p></li>
-          <li><p><strong>1954 - </strong>dies at the age of 41.</p></li>
+          <li><p><strong>1912</strong> - Born in London, United Kingdom</p></li>
+          <li><p><strong>1931</strong> - attended King's College in Cambridge where he was awarded first-class honours in Mathematics in 1934</p></li>
+          <li><p><strong>1935</strong> - at 22 years old, he was elected a fellow of King's on the strength of a dissertation in which he proved the central limit theorem.</p></li>
+          <li><p><strong>1936</strong> - he spent most of his time studying under Church at Princeton University, in the second year as a Jane Eliza Procter Visiting Fellow.</p></li>
+          <li><p><strong>1938</strong> - Turing obtained his PhD from the Department of Mathematics at Princeton.</p></li>
+          <li><p><strong>1938</strong> - he worked part-time with the Government Code and Cypher School (GC&CS), the British codebreaking organisation.</p></li>
+          <li><p><strong>1939</strong> - by using statistical techniques to optimise the trial of different possibilities in the code breaking process, Turing made an innovative contribution to the subject.</p></li>
+          <li><p><strong>1940</strong> - within weeks of arriving at Bletchley Park, Turing had specified an electromechanical machine called the bombe, which could break Enigma more effectively than the Polish bomba kryptologiczna, from which its name was derived.</p></li>
+          <li><p><strong>1942</strong> - Turing devised a technique termed Turingery (or jokingly Turingismus)[96] for use against the Lorenz cipher messages produced by the Germans' new Geheimschreiber (secret writer) machine.</p></li>
+          <li><p><strong>1945</strong> - he lived in Hampton, London, while he worked on the design of the ACE (Automatic Computing Engine) at the National Physical Laboratory (NPL).</p></li>
+          <li><p><strong>1948</strong> - Turing was appointed reader in the Mathematics Department at the Victoria University of Manchester.</p></li>
+          <li><p><strong>1950</strong> - he first addressed the issue of artificial intelligence in his 1950 paper, "Computing machinery and intelligence,".</p></li>
+          <li><p><strong>1954</strong> - dies at the age of 41.</p></li>
         </ul>
       </section>
 
